--- a/WebErp/master/BaseMasterPage.master
+++ b/WebErp/master/BaseMasterPage.master
@@ -46,19 +46,24 @@
         requirejs.config({
             baseUrl: '<%=HostingEnvironment.ApplicationVirtualPath%>',
             paths: {
-                "bootstrap":"public/css/bootstrap/js/bootstrap.min"
+                "bootstrap":"public/css/bootstrap/js/bootstrap.min",
+                "LoadingHelper":"public/scripts/LoadingHelper/LoadingHelper",
+                "LoadingHelper-css":"public/scripts/LoadingHelper/LoadingHelper"
             },
             shim: {
                 "bootstrap": { 
                     "deps": ['jquery'] 
                 },
+                "LoadingHelper":{
+                    "deps":["css!LoadingHelper-css"]
+                }
             },
             map: {
                 '*': {
                     css: '<%=HostingEnvironment.ApplicationVirtualPath%>/public/scripts/requirejs/css.min.js'
                 }
             },
-            urlArgs: "appVersion=201712181900" //reload all dependencies
+            urlArgs: "appVersion=201712202300" //reload all dependencies
         });
     </script>
     <asp:ContentPlaceHolder id="head" runat="server">
