--- a/WebErp/master/BaseMasterPage.master
+++ b/WebErp/master/BaseMasterPage.master
@@ -1,20 +1,21 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="BaseMasterPage.master.cs" Inherits="master_BaseMasterPage" %>
+
 <%@ Import Namespace="System.Web.Hosting" %>
 
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <meta http-equiv="X-UA-Compatible" content="IE=EDGE"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    
+
     <% string rootUrl = HostingEnvironment.ApplicationVirtualPath.Length > 1 ? HostingEnvironment.ApplicationVirtualPath + "/" : HostingEnvironment.ApplicationVirtualPath; %>
 
     <link rel="stylesheet" type="text/css" media="screen" href="<%=""+rootUrl %>public/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="<%=""+rootUrl %>public/css/font-awesome-4.4.0/css/font-awesome.min.css">
-    
-    <style >
+
+    <style>
         .fa-rotate-315 {
             -o-transform: rotate(-45deg);
             -webkit-transform: rotate(-45deg);
@@ -26,17 +27,246 @@
             -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
         }
+
+
+
         [v-cloak] {
             display: none;
+        }
+    </style>
+    <style>
+        #toolbox {
+            top: 25px;
+            right: 5px;
+            z-index: 2147483000;
+            position: fixed;
+        }
+
+
+            #toolbox .tooltiptext {
+                visibility: hidden;
+                position: absolute;
+                width: 120px;
+                background-color: #555;
+                color: #fff;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 6px;
+                z-index: 1;
+                opacity: 0;
+                transition: opacity .6s;
+            }
+
+            #toolbox:hover .tooltiptext {
+                visibility: visible;
+                opacity: 1;
+            }
+
+
+
+        .tooltip-right {
+            top: -5px;
+            left: 125%;
+        }
+
+
+
+            .tooltip-right::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                right: 100%;
+                margin-top: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent #555 transparent transparent;
+            }
+
+        .tooltip-bottom {
+            top: 135%;
+            left: 50%;
+            margin-left: -60px;
+        }
+
+
+
+            .tooltip-bottom::after {
+                content: "";
+                position: absolute;
+                bottom: 100%;
+                left: 50%;
+                margin-left: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent transparent #555 transparent;
+            }
+
+        .tooltip-top {
+            bottom: 125%;
+            left: 50%;
+            margin-left: -60px;
+        }
+
+
+
+            .tooltip-top::after {
+                content: "";
+                position: absolute;
+                top: 100%;
+                left: 50%;
+                margin-left: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: #555 transparent transparent transparent;
+            }
+
+        .tooltip-left {
+            top: -5px;
+            bottom: auto;
+            right: 128%;
+        }
+
+
+
+            .tooltip-left::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 100%;
+                margin-top: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent transparent transparent #555;
+            }
+
+        .tooltip .tooltiptext-bottomarrow {
+            visibility: hidden;
+            width: 120px;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+            position: absolute;
+            z-index: 1;
+            bottom: 130%;
+            left: 50%;
+            margin-left: -60px;
+        }
+
+            .tooltip .tooltiptext-bottomarrow::after {
+                content: "";
+                position: absolute;
+                top: 100%;
+                left: 50%;
+                margin-left: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: black transparent transparent transparent;
+            }
+
+        .tooltip:hover .tooltiptext-bottomarrow {
+            visibility: visible;
+        }
+
+        .tooltip .tooltiptext-toparrow {
+            visibility: hidden;
+            width: 120px;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+            position: absolute;
+            z-index: 1;
+            top: 150%;
+            left: 50%;
+            margin-left: -60px;
+        }
+
+            .tooltip .tooltiptext-toparrow::after {
+                content: "";
+                position: absolute;
+                bottom: 100%;
+                left: 50%;
+                margin-left: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent transparent black transparent;
+            }
+
+        .tooltip:hover .tooltiptext-toparrow {
+            visibility: visible;
+        }
+
+        .tooltip .tooltiptext-leftarrow {
+            visibility: hidden;
+            width: 120px;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+            position: absolute;
+            z-index: 1;
+            top: -5px;
+            left: 110%;
+        }
+
+            .tooltip .tooltiptext-leftarrow::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                right: 100%;
+                margin-top: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent black transparent transparent;
+            }
+
+        .tooltip:hover .tooltiptext-leftarrow {
+            visibility: visible;
+        }
+
+        .tooltip .tooltiptext-rightarrow {
+            visibility: hidden;
+            width: 120px;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+            position: absolute;
+            z-index: 1;
+            top: -5px;
+            right: 110%;
+        }
+
+            .tooltip .tooltiptext-rightarrow::after {
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 100%;
+                margin-top: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: transparent transparent transparent black;
+            }
+
+        .tooltip:hover .tooltiptext-rightarrow {
+            visibility: visible;
         }
     </style>
     <script src="<%=rootUrl %>public/scripts/vue/vue.js" type="text/javascript"></script>
     <script src="<%=rootUrl %>public/scripts/requirejs/require.min.js" type="text/javascript"></script>
     <script src="<%=rootUrl %>public/scripts/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
-    
+    <script>
+
+
+    </script>
     <script>
         if (!String.prototype.startsWith) {
-            String.prototype.startsWith = function(searchString, position) {
+            String.prototype.startsWith = function (searchString, position) {
                 position = position || 0;
                 return this.indexOf(searchString, position) === position;
             };
@@ -48,16 +278,16 @@
         requirejs.config({
             baseUrl: '<%=HostingEnvironment.ApplicationVirtualPath%>',
             paths: {
-                "bootstrap":"public/css/bootstrap/js/bootstrap.min",
-                "LoadingHelper":"public/scripts/LoadingHelper/LoadingHelper",
-                "LoadingHelper-css":"public/scripts/LoadingHelper/LoadingHelper"
+                "bootstrap": "public/css/bootstrap/js/bootstrap.min",
+                "LoadingHelper": "public/scripts/LoadingHelper/LoadingHelper",
+                "LoadingHelper-css": "public/scripts/LoadingHelper/LoadingHelper"
             },
             shim: {
-                "bootstrap": { 
-                    "deps": ['jquery'] 
+                "bootstrap": {
+                    "deps": ['jquery']
                 },
-                "LoadingHelper":{
-                    "deps":["css!LoadingHelper-css"]
+                "LoadingHelper": {
+                    "deps": ["css!LoadingHelper-css"]
                 }
             },
             map: {
@@ -68,16 +298,21 @@
             urlArgs: "appVersion=201712202300" //reload all dependencies
         });
     </script>
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
-    </div>
+
+        <div id="toolbox">
+
+            <img src="../public/images/if_folder_search_48770.png" style="width: 35px;" />
+            <span class="tooltiptext tooltip-left" style="top: 3px; font-size: 16px">商品資料查詢</span>
+        </div>
+        <div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>
     </form>
 </body>
 </html>
