--- a/WebErp/master/BaseMasterPage.master
+++ b/WebErp/master/BaseMasterPage.master
@@ -46,6 +46,7 @@
         var inBrowser = typeof window !== 'undefined';
         var isIE = inBrowser && window.navigator.userAgent.toLowerCase() && /msie|trident/.test(inBrowser && window.navigator.userAgent.toLowerCase());
         var loginUserName = localStorage["USER_ID"];
+        var CompCode = localStorage.getItem("COMP_CODE");
         var rootUrl = '<%=rootUrl %>';
         requirejs.config({
             baseUrl: '<%=HostingEnvironment.ApplicationVirtualPath%>',
@@ -56,7 +57,8 @@
                 "LoadingHelper-css": "public/scripts/LoadingHelper/LoadingHelper",
                 "UserLog": "public/scripts/UserLog/UserLog",
                 "vue-multiselect": "public/scripts/VueComponent/multiselect/vue-multiselect@2.0.3.min",
-                "vue-multiselect-css": "public/scripts/VueComponent/multiselect/vue-multiselect.min"
+                "vue-multiselect-css": "public/scripts/VueComponent/multiselect/vue-multiselect.min",
+                "print-js":"public/scripts/print.min"
             },
             shim: {
                 "bootstrap": {
@@ -74,8 +76,15 @@
                     css: '<%=rootUrl%>public/scripts/requirejs/css.min.js'
                 }
             },
-            urlArgs: "appVersion=20180218" //reload all dependencies
+            urlArgs: "appVersion=20180304" //reload all dependencies
         });
+
+        requirejs.onError = function (err) {
+    console.log(err.requireType);
+        console.log('modules: ' + err.requireModules);
+        console.err(err);
+        debugger;
+};
     </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
