--- a/WebErp/D_pcode/D_pcodeCss.css
+++ b/WebErp/D_pcode/D_pcodeCss.css
@@ -1,4 +1,4 @@
-﻿.app-title {
+﻿ .app-title {
             background-color: #3097D1;
             color: #FFF;
         }
@@ -7,32 +7,18 @@
             padding-left: 5px;
         }
 
-        .filter-div {
-            margin-top: 5px;
+        .padding-table td {
+            padding: 4px;
         }
 
-        .no-margin {
-            margin: 0 !important;
-        }
-
-        .no-padding {
-            padding: 0 !important;
+        .sort-item {
+            cursor: pointer;
         }
 
         .scroll-table {
             height: 450px;
             overflow-y: auto;
-            overflow-y: overlay;
             border: solid 1px #CCC;
-        }
-
-        .table-borderless > tbody > tr > td,
-        .table-borderless > tbody > tr > th,
-        .table-borderless > tfoot > tr > td,
-        .table-borderless > tfoot > tr > th,
-        .table-borderless > thead > tr > td,
-        .table-borderless > thead > tr > th {
-            border: none;
         }
 
         .rowclass:hover {
