--- a/WebErp/master/BaseMasterPage.master
+++ b/WebErp/master/BaseMasterPage.master
@@ -46,7 +46,11 @@
         var inBrowser = typeof window !== 'undefined';
         var isIE = inBrowser && window.navigator.userAgent.toLowerCase() && /msie|trident/.test(inBrowser && window.navigator.userAgent.toLowerCase());
         var loginUserName = localStorage["USER_ID"];
-        if (loginUserName == '') { loginUserName = 'davtest'; }
+        if (loginUserName) {
+            console.log(loginUserName);
+        } else {
+            loginUserName = 'DavTestLoginUser';
+        }
         var CompCode = localStorage.getItem("COMP_CODE");
         var rootUrl = '<%=rootUrl %>';
         requirejs.config({
